# tts_webui_extension.log_viewer

./: README.md  pyproject.toml  setup.py
tts_webui_extension/log_viewer/: __init__.py  analyzer.py  main.py  tab_all_logs.py  tab_pip_install.py  tab_pip_uninstall.py  utils.py
