[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.log_viewer"
version = "0.1.1"
description = "View, search, and manage log files from the TTS Generation WebUI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "rsxdalv"}
]
keywords = ["tts", "gradio", "log-viewer", "extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "gradio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts-generation-webui"
Repository = "https://github.com/rsxdalv/tts_webui_extension.log_viewer"
Issues = "https://github.com/rsxdalv/tts_webui_extension.log_viewer/issues"

[tool.setuptools]
packages = ["tts_webui_extension.log_viewer"]

[tool.setuptools.package-dir]
"tts_webui_extension.log_viewer" = "tts_webui_extension/log_viewer"
